ksh93_files += [
    'bltins/bg_fg_disown.c',
    'bltins/break_continue.c',
    'bltins/cd_pwd.c',
    'bltins/command.c',
    'bltins/enum.c',
    'bltins/exec_login.c',
    'bltins/eval.c',
    'bltins/getopts.c',
    'bltins/hist.c',
    'bltins/jobs.c',
    'bltins/let.c',
    'bltins/math.c',
    'bltins/print.c',
    'bltins/read.c',
    'bltins/return_exit.c',
    'bltins/shift.c',
    'bltins/sleep.c',
    'bltins/source.c',
    'bltins/test.c',
    'bltins/times.c',
    'bltins/trap.c',
    'bltins/true_false.c',
    'bltins/typeset.c',
    'bltins/ulimit.c',
    'bltins/umask.c',
    'bltins/wait.c',
    'bltins/whence.c'
]
