ksh93_files += [
    'bltins/alias.c',
    'bltins/bg.c',
    'bltins/break.c',
    'bltins/builtin.c',
    'bltins/cd.c',
    'bltins/command.c',
    'bltins/continue.c',
    'bltins/disown.c',
    'bltins/enum.c',
    'bltins/echo.c',
    'bltins/exec.c',
    'bltins/exit.c',
    'bltins/export.c',
    'bltins/eval.c',
    'bltins/false.c',
    'bltins/fg.c',
    'bltins/getopts.c',
    'bltins/hist.c',
    'bltins/jobs.c',
    'bltins/kill.c',
    'bltins/let.c',
    'bltins/math.c',
    'bltins/print.c',
    'bltins/printf.c',
    'bltins/pwd.c',
    'bltins/read.c',
    'bltins/readonly.c',
    'bltins/return.c',
    'bltins/set.c',
    'bltins/shift.c',
    'bltins/sleep.c',
    'bltins/source.c',
    'bltins/test.c',
    'bltins/times.c',
    'bltins/trap.c',
    'bltins/true.c',
    'bltins/typeset.c',
    'bltins/ulimit.c',
    'bltins/umask.c',
    'bltins/unalias.c',
    'bltins/unset.c',
    'bltins/wait.c',
    'bltins/whence.c'
]
