ksh93_files += [ 'data/aliases.c', 'data/builtins.c', 'data/keywords.c', 'data/lexstates.c', 'data/limits.c', 'data/msg.c', 'data/options.c', 'data/signals.c', 'data/strdata.c', 'data/testops.c', 'data/variables.c' ]

shcomp_files += [ 'data/aliases.c', 'data/builtins.c', 'data/keywords.c', 'data/lexstates.c', 'data/limits.c', 'data/msg.c', 'data/options.c', 'data/signals.c', 'data/strdata.c', 'data/testops.c', 'data/variables.c' ]

