#
# Install the man pages. If /usr/local is the install prefix this will put the `ksh` man page in the
# default man page directory: /usr/local/share/man/man1. The man pages for individual builtins will
# be installed in /usr/local/share/ksh/man.
#
install_man('ksh.1', install_mode: 'rw-r--r--')

# See also scripts/install_aux_files.sh which takes care of installing the private man pages.
