ksh93_files += [
    'sh/args.c',
    'sh/arith.c',
    'sh/array.c',
    'sh/bash.c',
    'sh/defs.c',
    'sh/deparse.c',
    'sh/expand.c',
    'sh/fault.c',
    'sh/fcin.c',
    'sh/init.c',
    'sh/io.c',
    'sh/jobs.c',
    'sh/lex.c',
    'sh/macro.c',
    'sh/main.c',
    'sh/name.c',
    'sh/nvdisc.c',
    'sh/nvtree.c',
    'sh/nvtype.c',
    'sh/parse.c',
    'sh/path.c',
    'sh/streval.c',
    'sh/string.c',
    'sh/subshell.c',
    'sh/tdump.c',
    'sh/timers.c',
    'sh/trestore.c',
    'sh/xec.c'
]
