ksh93_files += [
    'sh/args.c',
    'sh/arith.c',
    'sh/array.c',
    'sh/bash.c',
    'sh/debug.c',
    'sh/defs.c',
    # There is no code that uses the code in these modules so don't bother compiling, linting,
    # or styling it. But keep the module because it may prove useful in the future.
    # 'sh/deparse.c',
    'sh/expand.c',
    'sh/fault.c',
    'sh/fcin.c',
    'sh/init.c',
    'sh/io.c',
    'sh/jobs.c',
    'sh/lex.c',
    'sh/macro.c',
    'sh/main.c',
    'sh/name.c',
    'sh/nvdisc.c',
    'sh/nvtree.c',
    'sh/nvtype.c',
    'sh/parse.c',
    'sh/path.c',
    'sh/streval.c',
    'sh/string.c',
    'sh/subshell.c',
    'sh/tdump.c',
    'sh/timers.c',
    'sh/trestore.c',
    'sh/xec.c'
]
